syntax = "proto2";

package com.roomreservation.collection;

option java_multiple_files = true;
option java_package = "com.roomreservation.protobuf.protos";
option java_outer_classname = "UdpResponseProtos";

message UdpResponse {
  required string response = 1;
  required string dateTime = 2;
  required string requestType = 3;
  required string requestParameters = 4;
  required bool status = 5;
}